--- a/package.json
+++ b/package.json
@@ -91,15 +91,16 @@
     "z-ai-web-dev-sdk": "^0.0.15",
     "zod": "^4.0.2",
     "zustand": "^5.0.6",
-    "@tailwindcss/postcss": "^4"
+    "@tailwindcss/postcss": "^4",
+    "typescript": "^5",
+    "@types/react": "^19",
+    "@types/react-dom": "^19"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "@types/xlsx": "^0.0.35",
     "bcrypt": "^5.1.1",
     "bun-types": "^1.3.4",
@@ -108,8 +109,7 @@
     "eslint-config-next": "15.3.5",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
-    "tw-animate-css": "^1.3.5",
-    "typescript": "^5"
+    "tw-animate-css": "^1.3.5"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
